[package]
name = "rustflow"
description = "Fast & accurate dense optical flow"
version = "0.1.0"
authors = ["Ryan Brigden <rpb@hey.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
keywords = ["computer-vision"]
categories = ["computer-vision", "multimedia::video", "multimedia::images", "api-bindings"]
readme = "README.md"

[lib]
name = "rustflow"
path = "lib/lib.rs"

[build-dependencies]
bindgen = "0.56.0"
cc = "1.0.65"

[dependencies]
image = "0.23.12"
clap = "2.33.3"
itertools = "0.9.0"

